# UxVCtrl

./: .gitattributes  .gitignore  .travis.yml  AROVTest.sh  AROVTest.sln  AROVTest.txt  AROVTest.vcproj  AROVTest_Debug.bat  AROVTest_Release.bat  Ball.cpp  Ball.h  BlueView0.txt  BlueView1.txt  CHANGELOG.txt  CISCREA.txt  CMakeLists.txt  Commands.cpp  Commands.h  Compat_vs2008.bat  Compat_vs2012.bat  Compat_vs2015.bat  Compat_vs2017.bat  Computations.cpp  Computations.h  Config.cpp  Config.h  Controller.cpp  Controller.h  ExternalProgramTrigger.cpp  ExternalProgramTrigger.h  ExternalVisualLocalization.cpp  ExternalVisualLocalization.h  FollowMe.cpp  FollowMe.h  Globals.cpp  Globals.h  Hokuyo0.txt  IM483I0.txt  LIRMIA3.txt  MAVLinkDevice0.txt  (+119 more)
.github/workflows/: github-actions.yml
Backup_vs2008/: AROVTest.vcproj  UxVCtrl.sln  UxVCtrl.vcproj
Backup_vs2012/: AROVTest.sln  AROVTest.vcxproj  AROVTest.vcxproj.filters  UxVCtrl.vcxproj  UxVCtrl.vcxproj.filters
Backup_vs2014/: AROVTest.sln  AROVTest.vcxproj  AROVTest.vcxproj.filters
Backup_vs2015/: UxVCtrl.sln  UxVCtrl.vcxproj  UxVCtrl_Linux.vcxproj  UxVCtrl_Linux.vcxproj.filters
Backup_vs2017/: UxVCtrl.sln  UxVCtrl.vcxproj  UxVCtrl.vcxproj.filters  UxVCtrl_Linux.vcxproj  UxVCtrl_Linux.vcxproj.filters
Hardware/: AIS.h  ArduinoPressureSensor.cpp  ArduinoPressureSensor.h  BlueView.cpp  BlueView.h  CISCREA.cpp  CISCREA.h  Hokuyo.cpp  Hokuyo.h  I2CBus.cpp  I2CBus.h  IM483I.cpp  IM483I.h  LIRMIA3.cpp  LIRMIA3.h  MAVLinkDevice.cpp  MAVLinkDevice.h  MAVLinkProtocol.h  MDM.cpp  MDM.h  MES.cpp  MES.h  MS580314BA.cpp  MS580314BA.h  MS5837.cpp  MS5837.h  MS583730BA.cpp  MS583730BA.h  MT.cpp  MT.h  Maestro.cpp  Maestro.h  MiniSSC.cpp  MiniSSC.h  NMEADevice.cpp  NMEADevice.h  NMEAProtocol.h  NortekDVL.cpp  NortekDVL.h  Ontrak.cpp  (+40 more)
aud/: ReadMe.txt
log/: ReadMe.txt
restore/: ReadMe.txt
restore/pic/: ReadMe.txt
restore/vid/: ReadMe.txt
samples/TTS/: messagereceived.bat  missionstart.bat  missionstop.bat  targetdetected.bat  waypoint0.bat  waypoint1.bat
samples/drennec/: mission_close.txt  mission_closer.txt  mission_first.txt
samples/ensta/: ar_ENSTA_Bretagne_M.txt  ar_bluerov.txt  ar_goto.txt  ar_goto_ball.txt  avoid_temp.txt  ball.txt  extvisuloc.txt  lf_ball.txt  pipe.txt  proc_label.txt  scenario2.txt  swarm_ar_goto.txt  swarm_wall_ball.txt  triangle_ENSTA_Bretagne_Square.txt  triangle_ENSTA_Bretagne_Stadium.txt  visualobstacle.txt  wall.txt  wall_simu.txt
samples/env/: env_Berthaume.txt  env_Bourg-Blanc.txt  env_Boyard.txt  env_Drennec.txt  env_ENSTA_Bretagne.txt  env_ENSTA_Bretagne_HZ.txt  env_ENSTA_Bretagne_M014.txt  env_ENSTA_Bretagne_Stadium.txt  env_Etel.txt  env_Guerledan.txt  env_IAM.txt  env_IPN.txt  env_Ifremer.txt  env_LAFMIA.txt  env_La_Spezia.txt  env_Maine_Lake.txt  env_Mexico.txt  env_Moulin-Blanc.txt  env_Oran.txt  env_Patrick.txt  env_Penfeld.txt  env_Piombino.txt  env_Piombino_2017.txt  env_Piombino_corner.txt  env_Piombino_rectangle.txt  env_Polytechnique.txt  env_QINETIC_test_area.txt  env_Quatre_Pompes.txt  env_Southampton.txt  env_Tinduff.txt  env_Trez_Hir.txt  env_Ty_Colo.txt  env_UTAC.txt  env_Viana.txt  env_WRSC2013.txt  env_WRSC2014.txt  env_WRSC2015.txt  env_harbor.txt
samples/erl2017/: VGateOPI.txt  VGateOPIStruct.txt  VGateOPIStructCoop.txt  catamaran.txt  gateOK.txt  test_opi.txt
samples/erl2019/: mission.txt
samples/erl2019la/: 4wheel_test.txt  Video0_normal.txt  Video0_semi.txt  copter.txt  mission.txt  my_ball_configs.txt  my_color_detection.txt  my_copy_paste.txt  my_entrance.txt  my_goto.txt  my_mission.txt  my_triangle.txt  my_wall.txt  spiky.txt  spiky_hd.txt  spiky_simple.txt  spiky_very_very_simple.txt
samples/eurathlon2014/: S1_hovercraft.txt  S1_sardine_calib.txt  S2_hovercraft.txt  S2_sardine_calib.txt  S3_hovercraft.txt  S3_sardine_calib.txt  S5_hovercraft.txt  S5_sardine_calib.txt  gate_S3_sardine_calib.txt
samples/eurathlon2015/: GC_hovercraft_relay.txt  GC_hovercraft_relay0.txt  GC_sardine.txt  GC_sardine_corrected.txt  GC_sardine_relay.txt  GC_sardine_updated.txt  LA_trex.txt  S1_hovercraft.txt  S1_sardine_dr.txt  S1_sardine_local.txt  S2_sardine_dr.txt  S2_sardine_dr_from_gate.txt  SA_sardine.txt  gate.txt  gate1.txt
samples/guerledan/: dvl.txt  magneto.txt  mission.txt  shipwreck_area_mission_S02E01.txt  trees_mission_S02E01.txt
samples/keys/: keys_azerty.txt  keys_qwerty.txt  keys_qwertz.txt
samples/other/: L.txt  followme.txt  lf.txt  linefollowingcircletarget.txt  station.txt
samples/sauce2014/: GateS2StructMap_sardine_calib.txt  GateS2_sardine_calib.txt  qualif_pipe.txt  scenario2_sardine_calib.txt
samples/sauce2015/: VGateStructWallBall.txt  VGateStructWallBallPinger.txt  VGateWallBall.txt  WallBall.txt  box.txt  box_dr.txt  catamaran.txt  catamaran_gps.txt  pipe.txt  qualif_dr.txt  qualif_north_dr.txt  qualif_north_opt.txt  qualif_north_pipe.txt  qualif_pipe.txt  qualif_south_dr.txt  qualif_south_pipe.txt  to use for pipe, but with side cam GateS2StructMap_sardine_calib.txt
samples/sauce2016/: VGateStructWallBallPinger.txt  WallBall.txt  box_dr.txt  catamaran.txt  pipe.txt  qualif_north_opt.txt
samples/sauce2016/tests/: box.txt  catamaran_gps.txt  qualif_north_pipe.txt  to use for pipe, but with side cam GateS2StructMap_sardine_calib.txt
samples/tycolo/: mission_big.txt  mission_far.txt  mission_small.txt
samples/wrsc2015/: fleet_close.txt  fleet_far.txt  fleet_far2.txt  fleet_far3.txt  fleet_medium.txt  mission.txt  scan_SN.txt  scan_WE.txt  station.txt  triangular.txt  triangular2.txt  triangular_rev.txt
samples/wrsc2016/: fleet_micro.txt  fleet_opt.txt  obstacle.txt  obstacle_simu.txt  scan.txt  station.txt  station1.txt  station2.txt
samples/wrsc2018/: obstacle.txt  obstacle2.txt  obstacle_test.txt  station.txt
samples/wrsc20XX/: fleet.txt  obstacle2.txt  obstacle_test.txt
